Revise index.html with new content and structure
Updated HTML structure and content for the website, including service descriptions and image sources.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
 
    <div class="logo-hg">
-  <img src="logo_3.png" alt="לוגו HG" />
+  <img src="logo_3_w.webp" alt="לוגו HG - חלפון אלומיניום פרגולות" />
  </div>
 
 <div class="header-phone">
@@ -72,22 +72,27 @@
  </div>
 </section>
 <section id="services" class="services">
- <h2>השירותים שלנו</h2>
+ <h2>שירותי פרגולות וגדרות אלומיניום</h2>
+<p class="service-description">
+  אנו מתמחים בייצור והתקנה של פתרונות אלומיניום מתקדמים המותאמים אישית לאקלים הישראלי. 
+  צוות המומחים שלנו מספק שירותי <strong>פרגולות אלומיניום</strong> יוקרתיות, גדרות אלומיניום מעוצבות, 
+  סגירות חורף איכותיות וחניות מקורות עמידות. כל עבודה שלנו מגיעה עם <strong>10 שנות אחריות</strong> מלאה על חומרים ועבודה.
+</p>
  <div class="service-grid">
  <div class="service-card">
-  <img src="per_1.jpg" alt="תמונה של פרגולה" />
+  <img src="per_1_w.webp" alt="פרגולת אלומיניום מעוצבת למרפסת" />
   פרגולות אלומיניום מעוצבות
  </div>
  <div class="service-card">
-  <img src="per_5.jpg" alt="תמונה של גדרות" />
+  <img src="per_5_w.webp" alt="גדרות אלומיניום איכותיות לכניסה" />
   גדרות ושערים
  </div>
  <div class="service-card">
-  <img src="per_3.jpg" alt="תמונה של סגירות חורף" />
+  <img src="per_3_w.webp" alt="תמונה של סגירות חורף" />
   סגירות חורף
  </div>
  <div class="service-card">
-  <img src="per_4.jpg" alt="תמונה של חניות מקורות" />
+  <img src="per_4_w.webp" alt="תמונה של חניות מקורות" />
   חניות מקורות
  </div>
  </div>
@@ -162,20 +167,20 @@
 <section id="gallery" class="gallery">
  <h2>גלריית עבודות</h2>
  <div id="light-gallery" class="gallery-grid">
- <a href="per_real.jpg" class="gallery-item">
-  <img src="per_real.jpg" alt="פרגולה אלומיניום מקצועית">
+ <a href="per_real_w.webp" class="gallery-item">
+  <img src="per_real_w.webp" alt="פרגולה אלומיניום מקצועית">
  </a>
- <a href="per_real_2.jpg" class="gallery-item">
-  <img src="per_real_2.jpg" alt="פרגולה מודרנית בחצר">
+ <a href="per_real_2_w.webp" class="gallery-item">
+  <img src="per_real_2_w.webp" alt="פרגולה מודרנית בחצר">
  </a>
- <a href="gader.jpg" class="gallery-item">
-  <img src="gader.jpg" alt="גדר אלומיניום מעוצבת">
+ <a href="gader_w.webp" class="gallery-item">
+  <img src="gader_w.webp" alt="גדר אלומיניום מעוצבת">
  </a>
- <a href="shahar.jpg" class="gallery-item">
-  <img src="shahar.jpg" alt="סגירת חורף איכותית">
+ <a href="shahar_w.webp" class="gallery-item">
+  <img src="shahar_w.webp" alt="סגירת חורף איכותית">
  </a>
- <a href="per_real_3.jpg" class="gallery-item">
-  <img src="per_real_3.jpg" alt="חניה מקורה מאלומיניום">
+ <a href="per_real_3_w.webp" class="gallery-item">
+  <img src="per_real_3_w.webp" alt="חניה מקורה מאלומיניום">
  </a>
  </div>
 </section>
@@ -198,16 +203,19 @@
 </section>
 
 <footer>
+<p class="area-coverage">
+  <strong>אזור שירות:</strong> אנו גאים לספק שירותי בנייה והתקנה של <strong>פרגולות אלומיניום</strong> לתושבי <strong>עוטף עזה</strong>, 
+  אשקלון, שדרות וכל יישובי הסביבה. תמיכה בעסקים כחול-לבן ואספקת עבודה עברית ומקצועית.
+</p>
  <p>© <span id="year"></span> פרגולות אלומיניום - כל הזכויות שמורות</p>
 </footer>
 
 <a href="https://wa.me/972524281602" class="whatsapp-float" target="_blank" title="WhatsApp">
-<img src="logo_2.jpg" alt="WhatsApp logo" class="wa-img" />
+<img src="logo_2_w.webp" alt="וואטסאפ חלפון אלומיניום" class="wa-img" />
 </a>
 
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
 <script src="script.js"></script>
 </body>
-
 </html>
