--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
 
 <link rel="stylesheet" href="style.css">
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
+ <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "חלפון אלומיניום",
+  "url": "https://halfon-aluminum.co.il",
+  "logo": "https://halfon-aluminum.co.il/logo_3_w.webp",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+972-524281602",
+    "contactType": "customer service",
+    "areaServed": ["עוטף עזה", "אשקלון", "שדרות"]
+  },
+  "areaServed": [
+    {
+      "@type": "AdministrativeArea",
+      "name": "מחוז דרום, ישראל"
+    }
+  ]
+}
+</script>
 </head>
 <body>
 
@@ -219,3 +240,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
