--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <link rel="stylesheet" href="style.css">
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
- 
+ <link rel="icon" href="favicon.png" type="image/png">
+<link rel="apple-touch-icon" href="favicon.png">
 </head>
 <body>
 
@@ -220,3 +221,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
