Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
  <div class="overlay"></div>
  <div class="hero-content">
  <section class="center-offer">
- <h3>שנים של שקט נפשי: פרגולות אלומיניום עם אחריות לעשור</h3>
+ <h3>שנים של שקט נפשי: פרגולות אלומיניום באיכות גבהה</h3>
  <h1>
   פרגולת אלומיניום ב-<span>במחירים הוגנים</span>, 
   באיכות גבוהה ללא פשרות
@@ -221,5 +221,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
