Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   פרגולת אלומיניום ב-<span>במחירים הוגנים</span>, 
   באיכות גבוהה ללא פשרות
  </h1>
- <p class="small">המחיר אינו כולל מע"מ</p>
+ <p class="small">העסק שומר שבת</p>
 </section>
    
     <a href="#contact" class="hero-cta-button">
@@ -221,6 +221,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
